Fixed the spacing on signup and color on home border

--- a/src/Authentication/signup/SignUp.css
+++ b/src/Authentication/signup/SignUp.css
@@ -27,7 +27,7 @@
         border: 2px solid var(--gold);
         height: 350px;
         width: 550px;
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 0 3rem;
         margin: auto;
     }
     .signup {
